I worked on divs in the navigation and their css style.
Trying to find the problem with floating divs

--- a/index.html
+++ b/index.html
@@ -39,16 +39,9 @@
 		</div>
 	</div>
 
-
-
-
-
-
-
-
-
-
-
+	<div class="content">
+		<p>Here is the content of the Home page.</p>
+	</div>
 
 	<div class="footer">
 		<h3>
