Working on index.html and home.css
I made the template for all the pages. I organized the css style
according to the pages. The CSS still needs to be split among the pages
and into style.css and reset.css.

--- a/index.html
+++ b/index.html
@@ -2,56 +2,91 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Career Conference</title>	
+	<title>Careers in the Creative Arts</title>	
 	<link rel="stylesheet" href="css/home.css">		
 </head>
 
 <body>
 	<div class="header">
 		<div class="logo">
-			<img src="images/logo.png">
+			<img src="images/logo.png" width="50%">
 		</div>
 	</div>
 
 	<div class="navigation">
-		<div class="row1">
 			<div class="about">
-				<h1>About</h1>
+				<a class="nav" href="about.html">About</a>
 			</div>
-
 			<div class="schedule">
-				<h1>Schedule</h1>
+				<a class="nav" href="schedule.html">Schedule</a>
 			</div>
-		</div>
-
-		<div class="row2">
 			<div class="sessions">
-				<h1>Sessions</h1>
+				<a class="nav" href="sessions.html">Sessions</a>
 			</div>
 
 			<div class="speakers">
-				<h1>Speakers</h1>
+				<a class="nav" href="speakers.html">Speakers</a>
 			</div>
 
 			<div class="videos">
-				<h1>Videos</h1>
+				<a class="nav" href="videos.html">Videos</a>
 			</div>
 		</div>
 	</div>
 
 	<div class="content">
-		<p>Here is the content of the Home page.</p>
+		<p class="gen">
+			<b><i>Careers in the Creative Arts </b></i> is a one day event at BMCC that will give you direct insight into what it takes to be a creative professional from the creatives themselves. Come for free and learn how to make a living at what you love.
+		</p>
+
+		<h1 class="heading">DATE</h1>
+		<p class="date">
+			Friday, June 14, 2014
+		</p>
+
+		<h1 class="heading">LOCATION</h1>
+		<p class="address">
+			<b>Borough of Manhattan Community College</b><br>
+			<i>Richard Harris Terrace</i><br>
+			199 Chambers Street<br>
+			New York, NY 10007
+		</p>
+
+		<h1 class="heading">FEATURED SPEAKERS</h1>
+
+		<p class="gen">
+			Here is going to be something about Featured Speakers.
+		</p>
+
+		<h1 class="heading">WORKSHOPS</h1>
+			<h2 class="subheading">Creative Writing</h2>
+				<p class="gen">
+					Whether you write novels, plays, poems, short stories, fiction or non-fiction this is the place for you.
+				</p>
+
+			<h2 class="subheading">Fine Arts</h2>
+				<p class="gen">
+					All starving artists whether you're painters, sculptors, photographers, illustrators or anything else, make your way to this workshop.
+				</p>
+
+			<h2 class="subheading">Performing Arts</h2>
+				<p class="gen">
+					This is the spot for you if you express your creativity in front of people. Actors, musicians, dancers and theatre people are all welcome.
+				</p>
+
+			<h2 class="subheading">Media Arts</h2>
+				<p class="gen">
+					It's all about the media. From the silver screen, to magazines, to the mobile web, this is for all filmmakers, graphic designers, animators and web designers.
+				</p>
+
 	</div>
 
 	<div class="footer">
-		<h3>
-		<i>Media Arts and Technology Department </i><br>
-		212-346-8525 <br>
-		199 Chambers Street <br>
-		room N-681 <br>
-		New York, NY 10007 <br>
-		<b>Borough of Manhattan Community College || The City University of New York</b>
-		</h3>
+		<p class="add1">
+		<b>Borough of Manhattan Community College<br>
+		The City University of New York</b></p>
+		<p class="add2">199 Chambers Street <br>
+		New York, NY 10007 <br></p>
 	</div>
 
 </body>
