worked on all the pages and changed the name of css file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Careers in the Creative Arts</title>	
-	<link rel="stylesheet" href="css/home.css">		
+	<link rel="stylesheet" href="css/style.css">		
 </head>
 
 <body>
@@ -14,12 +14,14 @@
 	</div>
 
 	<div class="navigation">
+    		<div class="home">
+				<a class="nav" href="index.html">Home</a>
+			</div>
 			<div class="about">
 				<a class="nav" href="about.html">About</a>
 			</div>
 			<div class="schedule">
-				<a class="nav" href="schedule.html">Schedule</a>
-			</div>
+				<a class="nav" href="schedule.html">Schedule</a></div>
 			<div class="sessions">
 				<a class="nav" href="sessions.html">Sessions</a>
 			</div>
@@ -35,8 +37,8 @@
 	</div>
 
 	<div class="content">
-		<p class="gen">
-			<b><i>Careers in the Creative Arts </b></i> is a one day event at BMCC that will give you direct insight into what it takes to be a creative professional from the creatives themselves. Come for free and learn how to make a living at what you love.
+		<p class="hom">
+			Careers in the Creative Arts  is a one day event at BMCC that will give you direct insight into what it takes to be a creative professional from the creatives themselves. Come for free and learn how to make a living at what you love.
 		</p>
 
 		<h1 class="heading">DATE</h1>
@@ -54,28 +56,28 @@
 
 		<h1 class="heading">FEATURED SPEAKERS</h1>
 
-		<p class="gen">
+		<p class="hom">
 			Here is going to be something about Featured Speakers.
 		</p>
 
 		<h1 class="heading">WORKSHOPS</h1>
 			<h2 class="subheading">Creative Writing</h2>
-				<p class="gen">
+				<p class="hom">
 					Whether you write novels, plays, poems, short stories, fiction or non-fiction this is the place for you.
 				</p>
 
 			<h2 class="subheading">Fine Arts</h2>
-				<p class="gen">
+				<p class="hom">
 					All starving artists whether you're painters, sculptors, photographers, illustrators or anything else, make your way to this workshop.
 				</p>
 
 			<h2 class="subheading">Performing Arts</h2>
-				<p class="gen">
+				<p class="hom">
 					This is the spot for you if you express your creativity in front of people. Actors, musicians, dancers and theatre people are all welcome.
 				</p>
 
 			<h2 class="subheading">Media Arts</h2>
-				<p class="gen">
+				<p class="hom">
 					It's all about the media. From the silver screen, to magazines, to the mobile web, this is for all filmmakers, graphic designers, animators and web designers.
 				</p>
 
