--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Careers in the Creative Arts</title>	
-	<link rel="stylesheet" href="css/home.css">		
+	<link rel="stylesheet" href="css/style.css">		
 </head>
 
 <body>
@@ -14,7 +14,10 @@
 	</div>
 
 	<div class="navigation">
-			<div class="about">
+			<div class="home">
+				<a class="nav" href="index.html">Home</a>
+			</div>
+            <div class="about">
 				<a class="nav" href="about.html">About</a>
 			</div>
 			<div class="schedule">
