All files from e-mail
I sent the files to my e-mail and downloaded to my computer because
after last class I couldn't sync GitHub.

--- a/videos.html
+++ b/videos.html
@@ -11,46 +11,103 @@
 		<div class="logo">
 			<img src="images/logo.png" width="50%">
 		</div>
-	</div>
-
-	<div class="navigation">
-			<div class="home">
-				<a class="nav" href="index.html">Home</a>
-			</div>
-            <div class="about">
-				<a class="nav" href="about.html">About</a>
-			</div>
-			<div class="schedule">
-				<a class="nav" href="schedule.html">Schedule</a>
-			</div>
-			<div class="sessions">
-				<a class="nav" href="sessions.html">Sessions</a>
-			</div>
-
-			<div class="speakers">
-				<a class="nav" href="speakers.html">Speakers</a>
-			</div>
-
-			<div class="videos">
-				<a class="nav" href="videos.html">Videos</a>
-			</div>
+		<div class="menu">
+    		<a class="menu" href="#main_nav">MENU</a>
 		</div>
 	</div>
 
 	<div class="content">
 
 
-This is the content of the page.
+		<h1 class="vid"> Elsbeth Brown </h1>
+
+			<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/0yZJwjibLk4?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/0yZJwjibLk4?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+
+		<p class="vid">
+			Elsbeth talks about her career in dance, what brought her to BMCC and coming back to dance after leaving it.
+		</p>
+
+		<h1 class="vid"> Jody Culkin </h1>
+		
+		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/KqzO_1k44DU?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/KqzO_1k44DU?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+
+		<p class="vid">
+			Jody discusses her comic about how to use the Arduino microcontroller and the user of comics to explain technical topics.
+		</p>
+
+		<h1 class="vid"> Sarah Havilland </h1>
+		
+		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/vWdO7uUXvTI?version=3&amp;hl=en_US&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/vWdO7uUXvTI?version=3&amp;hl=en_US&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+
+		<p class="vid">
+			Sarah discusses her sculpture, "Reflection Bench," how it came about and what it signifies.
+		</p>
+
+		<h1 class="vid"> Sandra Poster </h1>
+		
+		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/XCHQZXKLASA?version=3&amp;hl=en_US&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/XCHQZXKLASA?version=3&amp;hl=en_US&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+
+		<p class="vid">
+			Sandra discusses her Emmy winning work "We Are New York" and what it was like to win an Emmy.
+		</p>
+
+		<h1 class="vid"> Malcolm Linton </h1>
+		
+		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/mEH70FEfisA?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/mEH70FEfisA?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+
+		<p class="vid">
+			Malcolm discusses his career as a photo journalist for major publications covering war and other big events.
+		</p>
+
+		<h1 class="vid"> Sheila Solomon Klass </h1>
+		
+		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/qBVQkzXpLvc?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/qBVQkzXpLvc?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+
+		<p class="vid">
+			Sheila discusses aging, teaching, writing and her article "Aging and the Inacessible City.".
+		</p>
 
 
 	</div>
 
 	<div class="footer">
-		<p class="add1">
-		<b>Borough of Manhattan Community College<br>
-		The City University of New York</b></p>
-		<p class="add2">199 Chambers Street <br>
-		New York, NY 10007 <br></p>
+
+		<div class="navigation">
+
+			<a name="main_nav"></a> 
+			<nav id="main_nav" >
+		  		<div class="navleft">
+			  		<ul>
+			      		<li><a class="nav" href="index.html">HOME</a></li>
+			      		<li><a class="nav" href="about.html">ABOUT</a></li>
+			      		<li><a class="nav" href="schedule.html">SCHEDULE</a></li>
+			      	</ul>
+		      	</div>
+
+		      	<div class="navright">
+		      		<ul>
+			      		<li><a class="nav" href="sessions.html">SESSIONS</a></li>
+			    		<li><a class="nav" href="speakers.html">SPEAKERS</a></li>
+			      		<li><a class="nav" href="videos.html">VIDEOS</a></li>
+			      	</ul>
+			    </div>  
+			</nav><!--end main_nav -->  
+			
+			<div class="top">
+					<a class="top" href="#top">Top</a>
+					<br>
+					<br>
+		</div>
+
+
+		<div class="address">
+			<p class="add1">
+			<b>Borough of Manhattan Community College<br>
+			The City University of New York</b></p>
+			<p class="add2">199 Chambers Street <br>
+			New York, NY 10007 <br></p>
+		</div>
+
 	</div>
 
 </body>
