--- a/about.html
+++ b/about.html
@@ -11,29 +11,8 @@
 		<div class="logo">
 			<img src="images/logo.png" width="50%">
 		</div>
-	</div>
-
-	<div class="navigation">
-			<div class="home">
-				<a class="nav" href="index.html">Home</a>
-			</div>
-            <div class="about">
-				<a class="nav" href="about.html">About</a>
-			</div>
-			<div class="schedule">
-				<a class="nav" href="schedule.html">Schedule</a>
-			</div>
-			<div class="sessions">
-				<a class="nav" href="sessions.html">Sessions</a>
-			</div>
-
-			<div class="speakers">
-				<a class="nav" href="speakers.html">Speakers</a>
-			</div>
-
-			<div class="videos">
-				<a class="nav" href="videos.html">Videos</a>
-			</div>
+		<div class="menu">
+    		<a class="menu" href="#main_nav">MENU</a>
 		</div>
 	</div>
 
@@ -59,9 +38,10 @@
 		<div class="date">
 			<h1 class="abo">DATE AND TIME</h1>
 
-				<p class="abo">
-                Friday, June 14, 2014<br>
-				8:30am - 4:30pm
+				<p class="abodate">
+                Friday<br>
+                June 14, 2014<br>
+				from 8:30am to 4:30pm
                 </p>
 		</div>
 
@@ -69,7 +49,7 @@
 
 		<div class="location">
 				<h1 class="abo">LOCATION</h1>
-					<p class="abo">
+					<p class="aboloc">
                     Borough of Manhattan Community College<br>
 					199 Chambers Street<br> 
 					New York, NY 10007
@@ -83,7 +63,7 @@
 		
 
 		<div class="map">
-			<p>map goes here</p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12096.287758125498!2d-74.0120121!3d40.7164328!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a1e7e56a86f%3A0x69339e9ddf4f987a!2sBorough+of+Manhattan+Community+College!5e0!3m2!1sen!2sus!4v1395079569711" width="100%" frameborder="0" style="border:0"></iframe>
 		</div>
 
 		
@@ -172,11 +152,43 @@
 	</div>
 
 	<div class="footer">
-		<p class="add1">
-		<b>Borough of Manhattan Community College<br>
-		The City University of New York</b></p>
-		<p class="add2">199 Chambers Street <br>
-		New York, NY 10007 <br></p>
+
+		<div class="navigation">
+
+			<a name="main_nav"></a> 
+			<nav id="main_nav" >
+		  		<div class="navleft">
+			  		<ul>
+			      		<li><a class="nav" href="index.html">HOME</a></li>
+			      		<li><a class="nav" href="about.html">ABOUT</a></li>
+			      		<li><a class="nav" href="schedule.html">SCHEDULE</a></li>
+			      	</ul>
+		      	</div>
+
+		      	<div class="navright">
+		      		<ul>
+			      		<li><a class="nav" href="sessions.html">SESSIONS</a></li>
+			    		<li><a class="nav" href="speakers.html">SPEAKERS</a></li>
+			      		<li><a class="nav" href="videos.html">VIDEOS</a></li>
+			      	</ul>
+			    </div>  
+			</nav><!--end main_nav -->  
+			
+			<div class="top">
+					<a class="top" href="#top">Top</a>
+					<br>
+					<br>
+		</div>
+
+
+		<div class="address">
+			<p class="add1">
+			<b>Borough of Manhattan Community College<br>
+			The City University of New York</b></p>
+			<p class="add2">199 Chambers Street <br>
+			New York, NY 10007 <br></p>
+		</div>
+
 	</div>
 
 </body>
