--- a/speakers.html
+++ b/speakers.html
@@ -11,29 +11,8 @@
 		<div class="logo">
 			<img src="images/logo.png" width="50%">
 		</div>
-	</div>
-
-	<div class="navigation">
-			<div class="home">
-				<a class="nav" href="index.html">Home</a>
-			</div>
-            <div class="about">
-				<a class="nav" href="about.html">About</a>
-			</div>
-			<div class="schedule">
-				<a class="nav" href="schedule.html">Schedule</a>
-			</div>
-			<div class="sessions">
-				<a class="nav" href="sessions.html">Sessions</a>
-			</div>
-
-			<div class="speakers">
-				<a class="nav" href="speakers.html">Speakers</a>
-			</div>
-
-			<div class="videos">
-				<a class="nav" href="videos.html">Videos</a>
-			</div>
+		<div class="menu">
+    		<a class="menu" href="#main_nav">MENU</a>
 		</div>
 	</div>
 
@@ -57,11 +36,43 @@ Speaker2
 	</div>
 
 	<div class="footer">
-		<p class="add1">
-		<b>Borough of Manhattan Community College<br>
-		The City University of New York</b></p>
-		<p class="add2">199 Chambers Street <br>
-		New York, NY 10007 <br></p>
+
+		<div class="navigation">
+
+			<a name="main_nav"></a> 
+			<nav id="main_nav" >
+		  		<div class="navleft">
+			  		<ul>
+			      		<li><a class="nav" href="index.html">HOME</a></li>
+			      		<li><a class="nav" href="about.html">ABOUT</a></li>
+			      		<li><a class="nav" href="schedule.html">SCHEDULE</a></li>
+			      	</ul>
+		      	</div>
+
+		      	<div class="navright">
+		      		<ul>
+			      		<li><a class="nav" href="sessions.html">SESSIONS</a></li>
+			    		<li><a class="nav" href="speakers.html">SPEAKERS</a></li>
+			      		<li><a class="nav" href="videos.html">VIDEOS</a></li>
+			      	</ul>
+			    </div>  
+			</nav><!--end main_nav -->  
+			
+			<div class="top">
+					<a class="top" href="#top">Top</a>
+					<br>
+					<br>
+		</div>
+
+
+		<div class="address">
+			<p class="add1">
+			<b>Borough of Manhattan Community College<br>
+			The City University of New York</b></p>
+			<p class="add2">199 Chambers Street <br>
+			New York, NY 10007 <br></p>
+		</div>
+
 	</div>
 
 </body>
