Images and some additional stuff

--- a/videos.html
+++ b/videos.html
@@ -21,7 +21,7 @@
 
 		<h1 class="vid"> Elsbeth Brown </h1>
 
-			<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/0yZJwjibLk4?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/0yZJwjibLk4?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+			<iframe width="95%" src="http://www.youtube.com/v/0yZJwjibLk4?hl=en_US&amp;version=3&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<p class="vid">
 			Elsbeth talks about her career in dance, what brought her to BMCC and coming back to dance after leaving it.
@@ -29,7 +29,7 @@
 
 		<h1 class="vid"> Jody Culkin </h1>
 		
-		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/KqzO_1k44DU?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/KqzO_1k44DU?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+			<iframe width="95%" src="http://www.youtube.com/v/KqzO_1k44DU?hl=en_US&amp;version=3&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<p class="vid">
 			Jody discusses her comic about how to use the Arduino microcontroller and the user of comics to explain technical topics.
@@ -37,7 +37,7 @@
 
 		<h1 class="vid"> Sarah Havilland </h1>
 		
-		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/vWdO7uUXvTI?version=3&amp;hl=en_US&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/vWdO7uUXvTI?version=3&amp;hl=en_US&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+			<iframe width="95%" src="http://www.youtube.com/v/vWdO7uUXvTI?version=3&amp;hl=en_US&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<p class="vid">
 			Sarah discusses her sculpture, "Reflection Bench," how it came about and what it signifies.
@@ -45,7 +45,7 @@
 
 		<h1 class="vid"> Sandra Poster </h1>
 		
-		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/XCHQZXKLASA?version=3&amp;hl=en_US&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/XCHQZXKLASA?version=3&amp;hl=en_US&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
+			<iframe width="95%" src="http://www.youtube.com/v/XCHQZXKLASA?version=3&amp;hl=en_US&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<p class="vid">
 			Sandra discusses her Emmy winning work "We Are New York" and what it was like to win an Emmy.
@@ -53,16 +53,16 @@
 
 		<h1 class="vid"> Malcolm Linton </h1>
 		
-		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/mEH70FEfisA?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/mEH70FEfisA?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
-
+			<iframe width="95%" src="http://www.youtube.com/v/mEH70FEfisA?hl=en_US&amp;version=3&amp;rel=0" frameborder="0" allowfullscreen></iframe>
+		
 		<p class="vid">
 			Malcolm discusses his career as a photo journalist for major publications covering war and other big events.
 		</p>
 
 		<h1 class="vid"> Sheila Solomon Klass </h1>
 		
-		<object width="250" height="141"><param name="movie" value="//www.youtube.com/v/qBVQkzXpLvc?hl=en_US&amp;version=3&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="//www.youtube.com/v/qBVQkzXpLvc?hl=en_US&amp;version=3&amp;rel=0" type="application/x-shockwave-flash" width="250" height="141" allowscriptaccess="always" allowfullscreen="true"></embed></object>
-
+			<iframe width="95%" src="http://www.youtube.com/v/qBVQkzXpLvc?hl=en_US&amp;version=3&amp;rel=0" frameborder="0" allowfullscreen></iframe>
+			
 		<p class="vid">
 			Sheila discusses aging, teaching, writing and her article "Aging and the Inacessible City.".
 		</p>
