Started Speakers and Worked on Margins

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Careers in the Creative Arts</title>	
-	<link rel="stylesheet" href="css/style.css">		
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/reset.css">
 </head>
 
 <body>
@@ -93,10 +94,10 @@
 		</div>
 
 
-		<div class="address">
+		<div class="f_address">
 			<p class="add1">
-			<b>Borough of Manhattan Community College<br>
-			The City University of New York</b></p>
+			Borough of Manhattan Community College<br>
+			The City University of New York</p>
 			<p class="add2">199 Chambers Street <br>
 			New York, NY 10007 <br></p>
 		</div>
