--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Careers in the Creative Arts</title>	
-	<link rel="stylesheet" href="css/style.css">		
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/about.css">
+
 </head>
 
 <body>
@@ -18,6 +21,10 @@
 
 	<div class="content">
     
+	  <div class="page_title">
+	  		<h1 class="title"> ABOUT </h1>
+	  	</div>
+
 	  <div class="conference">
 			<h1 class="abo">ABOUT THE CONFERENCE</h1>
 				<p class="abo">
