--- a/videos.html
+++ b/videos.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Careers in the Creative Arts</title>	
-	<link rel="stylesheet" href="css/style.css">		
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/reset.css">		
 </head>
 
 <body>
