Finished the Midterm

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="content">
-		<p class="hom">
+		<p class="info">
 			Careers in the Creative Arts  is a one day event at BMCC that will give you direct insight into what it takes to be a creative professional from the creatives themselves. Come for free and learn how to make a living at what you love.
 		</p>
 
@@ -37,28 +37,49 @@
 
 		<h1 class="heading">FEATURED SPEAKERS</h1>
 
-		<p class="hom">
-			Here is going to be something about Featured Speakers.
-		</p>
+			<h2 class="subheading">Bil Wright </h1>
+				<p class="info">
+					<img src="images/bil_wright.jpg" class="leftspeaker" />
+					Bil Wright is the author of the novels Sunday You Learn How to Box and One Foot in Love. His short fiction has appeared in many anthologies, including Black Silk, Shade and Black Like Us; his poetry has appears in the anthology, The Road Before Us. A member of the Dramatists Guild, his plays have been produced in the U.S. and Germany and are published in the collection, Tough Acts to Follow.
+				</p>
+
+			<h2 class="subheading">Alizabeth Towery </h1>
+				<p class="info">
+					<img src="images/alizabeth_towery.jpg" class="rightspeaker" />
+					Alizabeth Towery is a professor in the Music and Art Department. She is an artist and photographer with an MFA from the Visual Studies Workshop. She has taught at Parson School of Design and been a Senior Photography Editor at ABCNews.com.
+				</p>
+
+			<h2 class="subheading">Christopher Stein </h1>
+				<p class="info">
+					<img src="images/christopher_stein.jpg" class="leftspeaker" />
+					Christopher Stein is an Associate Professor in the Media Arts and Technology Department. He teaches a variety of courses, from introductory multimedia to advanced multimedia programming. Prior to teaching at BMCC he was a principle at a small new media production company where he worked on every aspect of multimedia projects including Web sites, interactive applications and database-driven applications.
+				</p> 
+
+			<h2 class="subheading">Sandra Poster </h1>
+				<p class="info">
+					<img src="images/sandra_poster.jpg" class="rightspeaker" />
+					Sandra Poster is a Professor in the Speech, Communications and Theatre Arts Department. She received her PhD in Media Ecology from NYU and recently received an Emmy for her work on the TV series We Are New York.
+				</p>
+
 
 		<h1 class="heading">WORKSHOPS</h1>
 			<h2 class="subheading">Creative Writing</h2>
-				<p class="hom">
+				<p class="info">
 					Whether you write novels, plays, poems, short stories, fiction or non-fiction this is the place for you.
 				</p>
 
 			<h2 class="subheading">Fine Arts</h2>
-				<p class="hom">
+				<p class="info">
 					All starving artists whether you're painters, sculptors, photographers, illustrators or anything else, make your way to this workshop.
 				</p>
 
 			<h2 class="subheading">Performing Arts</h2>
-				<p class="hom">
+				<p class="info">
 					This is the spot for you if you express your creativity in front of people. Actors, musicians, dancers and theatre people are all welcome.
 				</p>
 
 			<h2 class="subheading">Media Arts</h2>
-				<p class="hom">
+				<p class="info">
 					It's all about the media. From the silver screen, to magazines, to the mobile web, this is for all filmmakers, graphic designers, animators and web designers.
 				</p>
 
