--- a/schedule.html
+++ b/schedule.html
@@ -19,24 +19,37 @@
 
 	<div class="content">
 
+	  	<div class="page_title">
+	  		<h1 class="title"> SCHEDULE </h1>
+	  	</div>
+
 		<div class="opening">
-			<h1 class="sch">CONFERENCE OPENING </h1>
-			     <p class="sch">
-			     room: RICHARD HARRIS TERRACE <br>
-			     8:30am - 9:00am <br>
-			     Registration and Continental Breakfast <br>
-			     9:00am - 9:30am <br>
-			     Opening Remarks <br>
+			<h1 class="heading">CONFERENCE OPENING </h1>
+			     <p class="info">
+			     	room: RICHARD HARRIS TERRACE
+			     </p>
+			     <br>
+			     <h2 class="subheading">
+			     	8:30am - 9:00am 
+			     </h2>
+			     <p class="info">
+			    	 Registration and Continental Breakfast
+			 	 </p>
+			     <h2 class="subheading">
+			     	9:00am - 9:30am 
+			     </h2>
+			     <p class="info">
+			     Opening Remarks
 				 </p>
 		</div>
 
 		<div class="ses1"> 
-			<h1 class="sch"> SESSION I </h1>
-				<h2 class="sch">
+			<h1 class="heading"> SESSION I </h1>
+				<h2 class="subheading">
 					9:45am - 10:45am 
 				</h2>
 
-			        <p class="sch">
+			        <p class="info">
 				        Creative Writing: Writing for the Stage <br>
 				        room: N415 <br>
 				        <br>
@@ -52,12 +65,12 @@
 		</div>
 
 		<div class="ses2"> 
-			<h1 class="sch"> SESSION II </h1>
-				<h2 class="sch">
+			<h1 class="heading"> SESSION II </h1>
+				<h2 class="subheading">
 					11:00am - 12:00pm 
 				</h2>
 
-			        <p class="sch">        
+			        <p class="info">        
 			          	Creative Writing: Poet's Paradise <br>
 			          	room: N415<br>
 			          	<br>
@@ -73,23 +86,23 @@
 		</div>
 
 		<div class="lunch"> 
-			<h1 class="sch"> LUNCH </h1>
-				<h2 class="sch">
+			<h1 class="heading"> LUNCH </h1>
+				<h2 class="subheading">
 					12:00pm - 1:30pm
 				</h2>
 
-			        <p class="sch"> 
+			        <p class="info"> 
     					room: Cafeteria outside Richard Harris Terrace
     				</p>
     	</div>
 
 		<div class="ses3"> 
-			<h1 class="sch"> SESSION III</h1>
-				<h2 class="sch">
+			<h1 class="heading"> SESSION III</h1>
+				<h2 class="subheading">
 					1:45pm - 2:45pm
 				</h2>
 
-			        <p class="sch"> 
+			        <p class="info"> 
 						Creative Writing: Finding Your Voice <br>
 			          	room: N415 <br>
 			          	<br>
@@ -105,12 +118,12 @@
 		</div>
 
 		<div class="ses4"> 
-			<h1 class="sch"> SESSION IV</h1>
-				<h2 class="sch">
+			<h1 class="heading"> SESSION IV</h1>
+				<h2 class="subheading">
 					3:00pm - 4:00pm
 				</h2>
 
-			        <p class="sch"> 
+			        <p class="info"> 
 						Creative Writing: Getting Published <br>
           				room: N415 <br>
           				<br>
@@ -126,12 +139,12 @@
 		</div>
 
 		<div class="closing"> 
-			<h1 class="sch"> CONFERENCE CLOSING </h1>
-				<h2 class="sch">
+			<h1 class="heading"> CONFERENCE CLOSING </h1>
+				<h2 class="subheading">
 					4:15pm - 4:30pm 
 				</h2>
 			    
-			    <p class="sch">
+			    <p class="info">
 			        	Closing Remarks <br>
 			        	room: RICHARD HARRIS TERRACE
 			    </p>
