--- a/videos.html
+++ b/videos.html
@@ -19,52 +19,61 @@
 
 	<div class="content">
 
+		<div class="page_title">
+	  		<h1 class="title"> VIDEOS </h1>
+	  	</div>
 
-		<h1 class="vid"> Elsbeth Brown </h1>
+		<h1 class="heading"> Elsbeth Brown </h1>
+		<br>
 
 			<iframe width="95%" src="http://www.youtube.com/v/0yZJwjibLk4?hl=en_US&amp;version=3&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 
-		<p class="vid">
+		<p class="info">
 			Elsbeth talks about her career in dance, what brought her to BMCC and coming back to dance after leaving it.
 		</p>
 
-		<h1 class="vid"> Jody Culkin </h1>
+		<h1 class="heading"> Jody Culkin </h1>
+		<br>
 		
 			<iframe width="95%" src="http://www.youtube.com/v/KqzO_1k44DU?hl=en_US&amp;version=3&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 
-		<p class="vid">
+		<p class="info">
 			Jody discusses her comic about how to use the Arduino microcontroller and the user of comics to explain technical topics.
 		</p>
 
-		<h1 class="vid"> Sarah Havilland </h1>
+		<h1 class="heading"> Sarah Havilland </h1>
+		<br>
 		
 			<iframe width="95%" src="http://www.youtube.com/v/vWdO7uUXvTI?version=3&amp;hl=en_US&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 
-		<p class="vid">
+		<p class="info">
 			Sarah discusses her sculpture, "Reflection Bench," how it came about and what it signifies.
 		</p>
 
-		<h1 class="vid"> Sandra Poster </h1>
+		<h1 class="heading"> Sandra Poster </h1>
+		<br>
 		
 			<iframe width="95%" src="http://www.youtube.com/v/XCHQZXKLASA?version=3&amp;hl=en_US&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 
-		<p class="vid">
+		<p class="info">
 			Sandra discusses her Emmy winning work "We Are New York" and what it was like to win an Emmy.
 		</p>
 
-		<h1 class="vid"> Malcolm Linton </h1>
+		<h1 class="heading"> Malcolm Linton </h1>
+		<br>
 		
 			<iframe width="95%" src="http://www.youtube.com/v/mEH70FEfisA?hl=en_US&amp;version=3&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 		
-		<p class="vid">
+		<p class="info">
 			Malcolm discusses his career as a photo journalist for major publications covering war and other big events.
 		</p>
 
-		<h1 class="vid"> Sheila Solomon Klass </h1>
+		<h1 class="heading"> Sheila Solomon Klass </h1>
+		<br>
 		
 			<iframe width="95%" src="http://www.youtube.com/v/qBVQkzXpLvc?hl=en_US&amp;version=3&amp;rel=0" frameborder="0" allowfullscreen></iframe>
 			
-		<p class="vid">
+		<p class="info">
 			Sheila discusses aging, teaching, writing and her article "Aging and the Inacessible City.".
 		</p>
 
